--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "dj-database-url>=3.0.1",
+    "django>=5.2.5",
+    "django-cors-headers>=4.7.0",
+    "djangorestframework>=3.16.0",
+    "djangorestframework-simplejwt>=5.5.1",
+    "djoser>=2.3.3",
+    "psycopg2-binary>=2.9.10",
+    "python-decouple>=3.8",
+]
