--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "djangorestframework>=3.16.0",
     "djangorestframework-simplejwt>=5.5.1",
     "djoser>=2.3.3",
+    "drf-spectacular>=0.28.0",
+    "drf-spectacular-sidecar>=2025.8.1",
+    "gunicorn>=23.0.0",
     "psycopg2-binary>=2.9.10",
     "python-decouple>=3.8",
 ]
